# pyAdbBackup

./: README.md  pyproject.toml
pyadbbackup/: __init__.py  backup.py  exceptions.py  main.py  partition.py
